--- a/www/registration.html
+++ b/www/registration.html
@@ -6,7 +6,8 @@
     <meta content=
     "user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"
     name="viewport">
-    <script src="cordova.js" type="text/javascript"></script>
+    <script src="cordova.js"></script>
+    <script src="barcodescanner.js"></script>
     <title>Garden of Eden</title>
 </head>
 <body>	
